style: fix mobile spacing of cards

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -300,12 +300,17 @@ body, html {
     }
 
     .board {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 10px 10px;
     }
 
     .char-card {
-        width: 150px;
+        width: 100%;
+    }
+
+    .char-name {
+        text-align: center;
     }
 
     .overlay {
